# ft_printf

./: ._create_array.c  CMakeLists.txt  Makefile  README.md  a.out  basic_lists.c  conversion.c  conversions2.c  flags_handle.c  ft_printf.c  ft_printf.h  helpers.c  helpers2.c  helpers3.c  helpers4.c  helpers5.c  parse_args.c  pog  principal_functions.c  prog  validate_fun.c  wap.c  width_help.c
libft/: Makefile  ft_atoi.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_strdup.c  libft.h
pog.dSYM/Contents/: Info.plist
pog.dSYM/Contents/Resources/DWARF/: pog
prog.dSYM/Contents/Resources/DWARF/: prog
